--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Pipeline de CI/CD
+name: CI/CD pipeline
 
 on:
   push:
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
     - uses: actions/checkout@v4
     - name: Set up JDK 21
       uses: actions/setup-java@v4
@@ -19,6 +20,12 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+
     - name: Build and execute tests with Maven
       run: mvn -B package
+
+    - name: Deploy with Render
+      if: success()
+      run : |
+        curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
 
