--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
 
     - uses: actions/checkout@v4
+
+    - name: Notificar a Slack push o pull request recibido
+      run: |
+        curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":" Nuevo push o pull request en la rama *master*."}' \
+        ${{ secrets.SLACK_WEBHOOK_URL }}      
+
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
@@ -21,8 +28,35 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
+    - name: Notificar a Slack tests iniciados
+      run: |
+        curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":"Se están ejecutando los tests..."}' \
+        ${{ secrets.SLACK_WEBHOOK_URL }}        
+
     - name: Build and execute tests with Maven
       run: mvn -B package
+
+    - name: Notificar a Slack tests superados
+      if: success()
+      run: |
+        curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":"Los tests *NO encontraron errores*."}' \
+        ${{ secrets.SLACK_WEBHOOK_URL }}
+
+    - name: Notificar a Slack tests fallidos
+      if: failure()
+      run: |
+        curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":"Los tests *SÍ encontraron errores*. Abortando merge hacia master. Abortando deploy. "}' \
+        ${{ secrets.SLACK_WEBHOOK_URL }}
+        
+    - name: Notificar a Slack despliegue iniciado
+      if: success()
+      run: |
+        curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":"Iniciando despliegue en Render.. aguarde unos segundos e ingrese desde: https://demo-f9ag.onrender.com"}' \
+        ${{ secrets.SLACK_WEBHOOK_URL }}        
 
     - name: Deploy with Render
       if: success()
