--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,10 +17,10 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - name: Notificar a Slack push o pull request recibido
+    - name: Notificar a Slack pull request recibido
       run: |
         curl -X POST -H 'Content-type: application/json' \
-        --data '{"text":" Nuevo push o pull request en la rama *master*."}' \
+        --data '{"text":" Nuevo pull request hacia *master*."}' \
         ${{ secrets.SLACK_WEBHOOK_URL }}      
 
     - name: Set up JDK 21
@@ -50,7 +50,7 @@ jobs:
       if: failure()
       run: |
         curl -X POST -H 'Content-type: application/json' \
-        --data '{"text":"Los tests *SÍ encontraron errores*. Merge hacia master prohibido. Abortando deploy. "}' \
+        --data '{"text":"Los tests *SÍ encontraron errores*. Merge hacia master *prohibido*. Abortando deploy. "}' \
         ${{ secrets.SLACK_WEBHOOK_URL }}
 
   deploy:
@@ -61,11 +61,17 @@ jobs:
     steps:
 
     - uses: actions/checkout@v4
+
+    - name: Notificar a Slack merge hacia master exitoso
+      run: |
+        curl -X POST -H 'Content-type: application/json' \
+        --data '{"text":"Merge hacia *master* exitoso"}' \
+        ${{ secrets.SLACK_WEBHOOK_URL }}      
         
     - name: Notificar a Slack despliegue iniciado
       run: |
         curl -X POST -H 'Content-type: application/json' \
-        --data '{"text":"Iniciando despliegue en Render.. aguarde unos segundos e ingrese desde: https://demo-f9ag.onrender.com"}' \
+        --data '{"text":"Iniciando despliegue en Render... aguarde unos segundos e ingrese desde: https://demo-f9ag.onrender.com"}' \
         ${{ secrets.SLACK_WEBHOOK_URL }}        
 
     - name: Deploy con Render
