--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,7 +66,8 @@ jobs:
       if: steps.unitTests.outcome == 'success'
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+      run: |
+        mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
         -Dsonar.projectKey=yamilmoselli_demo \
         -Dsonar.organization=yamilmoselli \
         -Dsonar.host.url=https://sonarcloud.io
