action fixed again v4

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,18 +37,17 @@ jobs:
         ${{ secrets.SLACK_WEBHOOK_URL }}        
 
     - name: Build and execute unit tests with Maven
-      id: unitTests
       run: mvn -B package
 
     - name: Notificar a Slack tests unitarios superados
-      if: steps.unitTests.outcome == 'success'
+      if: success()
       run: |
         curl -X POST -H 'Content-type: application/json' \
         --data '{"text":"Los tests unitarios *NO encontraron errores*"}' \
         ${{ secrets.SLACK_WEBHOOK_URL }}
 
     - name: Notificar a Slack tests unitarios fallidos
-      if: steps.unitTests.outcome == 'failure'
+      if: failure()
       run: |
         curl -X POST -H 'Content-type: application/json' \
         --data '{"text":"Los tests unitarios *SÍ encontraron errores*. Merge hacia master *prohibido*.\
@@ -56,7 +55,7 @@ jobs:
         ${{ secrets.SLACK_WEBHOOK_URL }}
 
     - name: Notificar a Slack escaneo de SonarQube Cloud iniciado
-      if: steps.unitTests.outcome == 'success'
+      if: success()
       run: |
         curl -X POST -H 'Content-type: application/json' \
         --data '{"text":"Se está ejecutando el escaneo de SonarQube Cloud... Merge a master permitido --> estándares de\
@@ -65,7 +64,7 @@ jobs:
         ${{ secrets.SLACK_WEBHOOK_URL }}        
 
     - name: SonarQube Cloud Scan
-      if: steps.unitTests.outcome == 'success'
+      if: success()
       id: sonar
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
