--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,6 +37,7 @@ jobs:
         ${{ secrets.SLACK_WEBHOOK_URL }}        
 
     - name: Build and execute unit tests with Maven
+      id: unitTests
       run: mvn -B package
 
     - name: Notificar a Slack tests unitarios superados
@@ -55,7 +56,7 @@ jobs:
         ${{ secrets.SLACK_WEBHOOK_URL }}
 
     - name: Notificar a Slack escaneo de SonarQube Cloud iniciado
-      if: success()
+      if: steps.unitTests.outcome == 'success'
       run: |
         curl -X POST -H 'Content-type: application/json' \
         --data '{"text":"Se está ejecutando el escaneo de SonarQube Cloud... Merge a master permitido --> estándares de\
@@ -65,7 +66,6 @@ jobs:
 
     - name: SonarQube Cloud Scan
       if: success()
-      id: sonar
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
