--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,14 +37,15 @@ jobs:
         ${{ secrets.SLACK_WEBHOOK_URL }}        
 
     - name: Build and execute unit tests with Maven
-      id: unitTests
       run: mvn -B package
 
     - name: Notificar a Slack tests unitarios superados
       if: success()
       run: |
         curl -X POST -H 'Content-type: application/json' \
-        --data '{"text":"Los tests unitarios *NO encontraron errores*"}' \
+        --data '{"text":"Los tests unitarios *NO encontraron errores*\n Iniciando escaneo de SonarQube Cloud...\n\
+        Merge a master permitido => estándares de calidad superados\n\
+        Merge a master prohibido => estándares de calidad no superados"}' \
         ${{ secrets.SLACK_WEBHOOK_URL }}
 
     - name: Notificar a Slack tests unitarios fallidos
@@ -53,16 +54,7 @@ jobs:
         curl -X POST -H 'Content-type: application/json' \
         --data '{"text":"Los tests unitarios *SÍ encontraron errores*. Merge hacia master *prohibido*.\
         Escaneo de SonarQubeCloud cancelado. Abortando deploy"}' \
-        ${{ secrets.SLACK_WEBHOOK_URL }}
-
-    - name: Notificar a Slack escaneo de SonarQube Cloud iniciado
-      if: steps.unitTests.outcome == 'success'
-      run: |
-        curl -X POST -H 'Content-type: application/json' \
-        --data '{"text":"Se está ejecutando el escaneo de SonarQube Cloud... Merge a master permitido --> estándares de\
-        calidad pasados. Merge a master prohibido --> estándares de calidad no superados.\
-        https://sonarcloud.io/project/overview?id=yamilmoselli_demo"}' \
-        ${{ secrets.SLACK_WEBHOOK_URL }}        
+        ${{ secrets.SLACK_WEBHOOK_URL }}       
 
     - name: SonarQube Cloud Scan
       if: success()
